Fixed #25 - now tab icons are not cropped

--- a/src/css/sidebar.css
+++ b/src/css/sidebar.css
@@ -109,11 +109,11 @@
 }
 
 .sidebar-tab-favicon {
-	background-size: auto;
+	background-size: cover;
 	background-position: 50% 50%;
 	background-repeat: no-repeat;
-	width: 16px;
-	height: 16px;
+	width: 18px;
+	height: 18px;
 	display: inline-block;
     position: relative;
     margin-top: 1px;
